tests/fail/tip-atama-ondalik-olarak-tam.kip
(* Yanlış tip ataması: ondalık-sayı olarak tam-sayı *)
ondalık-sayı olarak 5.
